# agent-eval-pipeline

./: .env.example  .gitignore  CODE_ELEVATION_ASSESSMENT.md  CODE_REVIEW.md  ELEVATION_PLAN.md  EVAL_FRAMEWORK_INTEGRATION_PLAN.md  FINAL_REVIEW.md  INTERVIEW_PREP.md  README.md  REVIEW_REPORT.md  TASK_SEMANTIC_CACHING.md  codebase_analysis.md  codex-review.md  flowchart TD.mmd  pyproject.toml
.claude/skills/: code-elevation.skill
.claude/skills/code-elevation/: SKILL.md
.claude/skills/healthcare-eval/: RUBRICS.md  Skill.md
.github/workflows/: eval-gates.yml
docs/: PROJECT_SHOWCASE.md  TOOLING_OVERVIEW.md
examples/artifacts/: README.md  comparative_eval_output.json  deepeval_output.txt  otel_phoenix_output.txt  pipeline_output.txt  ragas_evaluation_output.txt  ragas_output.txt  unit_tests_output.txt
src/agent_eval_pipeline/: __init__.py
src/agent_eval_pipeline/agent/: __init__.py  dspy_agent.py  dspy_react_agent.py  graph.py  lab_insights_agent.py  langgraph_agent.py  langgraph_runner.py  state.py
src/agent_eval_pipeline/cli/: __init__.py  commands.py
src/agent_eval_pipeline/core/: __init__.py  protocols.py
src/agent_eval_pipeline/embeddings/: __init__.py  openai_embeddings.py
src/agent_eval_pipeline/evals/: __init__.py  judge_eval.py  perf_eval.py  retrieval_eval.py  schema_eval.py
src/agent_eval_pipeline/golden_sets/: __init__.py  thyroid_cases.py
tests/: test_agent_nodes.py  test_cli_commands.py  test_comparative_runner.py  test_context_sharing.py  test_deepeval_integration.py  test_dspy.py  test_end_to_end.py  test_eval_frameworks.py  test_evals.py  test_harness.py  test_observability.py  test_perf_evaluator.py  test_pgvector_store.py  test_ragas_adapters.py  test_retrieval_store.py  test_schema_eval.py  test_unified_runner.py
(+43 files in other folders)
